Added useful resources

--- a/common/styles/common.css
+++ b/common/styles/common.css
@@ -7,6 +7,10 @@ ul.ul-horizontal li {
   display: inline-block;
 }
 
+ul.ul-unstyled{
+  list-style-type: none;
+}
+
 .hidden {
   display: none;
 }
