--- a/task2/style.css
+++ b/task2/style.css
@@ -1,3 +1,12 @@
+.mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, .7);
+}
+
 #dialog {
   box-sizing: border-box;
   padding: 1rem;
